# toolbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: design.md  python-service-scaffolding.md  slack-wireframes.md  technical-design.md
migrations/: env.py
migrations/versions/: ad0b04f8e43c_initial_schema.py
tests/: conftest.py  test_app.py  test_slack.py
toolbot/: __init__.py  config.py  extensions.py
toolbot/models/: __init__.py  audit_event.py  reservation.py  tool.py  user.py
toolbot/slack/: __init__.py  handlers.py
toolbot/templates/: base.html
toolbot/templates/components/: _flash_messages.html  _footer.html
toolbot/templates/public/: index.html
