[project]
name = "toolbot"
version = "0.1.0"
description = "Makerspace tool scheduling service with Slack reservations"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.1.2",
    "Flask-SQLAlchemy>=3.1.1",
    "PyMySQL>=1.1.1",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
